Change to N-tier architecture

--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     </div>
 
 @*     <footer class="border-top footer text-muted bg-dark"> *@
-    <footer class="border-top footer bg-primary text-muted ">
+    <footer class="border-top footer bg-primary text-secondary ">
         <div class="container text-center">
             Made with .NET 8 <i class="bi bi-microsoft"></i>
         </div>
