--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -28,7 +28,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+@*             <tbody> *@
 @*                 @foreach (var item in Model)
                 {
                     <tr>
