--- a/BulkyWeb/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ShoppingCartVM
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 <form method="post">
 	<br />
 	<div class="container">
@@ -116,7 +117,11 @@
 						</p>
 					</div>
 					<div class="col-12 col-md-4">
-						<button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order</button>
+						@if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionCart).GetValueOrDefault() > 0)
+						{
+							<button type="submit" value="Place Order" class="btn btn-primary form-control">Place Order</button>
+						}
+						
 					</div>
 				</div>
 			</div>
