--- a/BulkyWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -81,6 +81,7 @@
                                     </span>
                                     <input asp-for="Count" type="number" value="1" class="form-control text-end"
                                            aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
+                                           <span asp-validation-for="Count" class="text-danger"></span>
 
                                 </div>
                             </div>
@@ -101,3 +102,9 @@
     </div>
 </form>
 </div>
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+
+}
