--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-10">
                         <div class="border p-3">
                             <input asp-for="Product.Id" hidden />
-                            <input asp-for="Product.ImageUrl" hidden />
+@*                             <input asp-for="Product.ImageUrl" hidden /> *@
                             <div asp-validation-summary="ModelOnly"></div>
                             <div class="form-floating py-2 col-12">
                                 <input asp-for="Product.Title" class="form-control border-0 shadow" />
@@ -58,8 +58,8 @@
                                 <span asp-validation-for="Product.Price100" class="text-danger"></span>
                             </div>
                             <div class="form-floating py-2 col-12">
-                                <input type="file" name="file" class="form-control border-0 shadow" />
-                                <label asp-for="Product.ImageUrl" class="ms-2"></label>
+                                <input type="file" name="files" class="form-control border-0 shadow" multiple />
+                                <label asp-for="Product.ProductImages" class="ms-2"></label>
                                 @* <span asp-validation-for="Product.ImageUrl" class="text-danger"></span> *@
                             </div>
                             <div class="form-floating py-2 col-12">
@@ -90,8 +90,21 @@
                         </div>
                 </div>
                 <div class="col-2">
-                    <img src="@Model.Product.ImageUrl" width="100%"
-                    style="border-radius:5px; border:1px solid #bbb9b9"/>
+                        @if (Model.Product.ProductImages != null)
+                        {
+                            foreach (var image in Model.Product.ProductImages)
+                            {
+                                <div class="border p-1 m-2 text-center">
+                                    <img src="@image.ImageURL" width="100%"
+                                         style="border-radius:5px; border:1px solid #bbb9b9" />
+                                    <a asp-action="DeleteImage" class="btn btn-danger mt-2" asp-route-imageId="@image.Id">
+                                        <i class="bi bi-trash-fill"></i> Delete
+                                    </a>
+                                </div>
+                            }
+                        }
+@*                     <img src="@Model.Product.ImageUrl" width="100%"
+                    style="border-radius:5px; border:1px solid #bbb9b9"/> *@
 
                 </div>
             </div>
