final style modifications

--- a/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model OrderVM
+<div class="mb-5">
 <form method="post">
     <input asp-for="OrderHeader.Id" hidden />
     <br />
@@ -257,6 +258,7 @@
         </div>
     </div>
 </form>
+</div>
 
 @section Scripts {
 
