--- a/BulkyWeb/Areas/Admin/Views/Order/PaymentConfirmation.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Order/PaymentConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@model int
-
+<div class="mb-4">
 <div class="container row pt-4">
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Payment Successful!</h1>
@@ -11,4 +11,5 @@
         Your order has been applied successfully!<br />
         <a asp-area="Admin" asp-controller="Order" asp-action="Details" asp-route-orderId="@Model" class="btn btn-primary">Back To Order Details</a>
     </div>
+</div>
 </div>
